# storage-goblin

./: .gitignore  README.md  brief.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/storage/: activity.rs  commands.rs  credentials_store.rs  inventory_compare.rs  local_index.rs  mod.rs  profile_store.rs  remote_bin.rs  remote_index.rs  s3_adapter.rs  sync_db.rs  sync_planner.rs  sync_state.rs  watchers.rs
src/app/: activity.test.ts  activity.ts  bootstrap.test.ts  bootstrap.ts  client.test.ts  client.ts  dom.ts  file-tree-virtual.test.ts  file-tree-virtual.ts  file-tree.test.ts  file-tree.ts  persistence.ts  profile.test.ts  profile.ts  status.test.ts  status.ts  types.ts
